--- a/src/features/customer/detail/components/DetailProduct.css
+++ b/src/features/customer/detail/components/DetailProduct.css
@@ -1,13 +1,13 @@
 .detail-buttom{
+    padding: 20px 0px; 
+    display: flex;
 }
 
 .addToCart{
-    background-color: yellow;
     color: black;
-    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .buy{
-    background-color: red;
     color: white;
 }
