--- a/src/features/customer/login_register/index.css
+++ b/src/features/customer/login_register/index.css
@@ -25,7 +25,7 @@ html {
 
 section {
     width: 100%;
-    max-width: 420px;
+    max-width: 500px;
     min-height: 400px;
     display: flex;
     flex-direction: column;
@@ -54,6 +54,7 @@ textarea {
   font-size: 22px;
   padding: 0.25rem;
   border-radius: 0.5rem;
+  width: 100%;
 }
 
 label,
@@ -108,6 +109,7 @@ button {
 
 .line {
     display: inline-block;
+    text-decoration: none;
 }
 
 .path{
