--- a/src/features/customer/home/HomePage.css
+++ b/src/features/customer/home/HomePage.css
@@ -1,4 +1,4 @@
-.home-container {
+/* .home-container {
   padding: 2rem 4rem;
 }
 .home-container h2 {
@@ -62,4 +62,4 @@
   border: none;
   outline: none;
   cursor: pointer;
-}
+} */
