--- a/src/features/admin/ProductManagement/Pages/productPage.css
+++ b/src/features/admin/ProductManagement/Pages/productPage.css
@@ -1,3 +1,5 @@
+
+
 .imgTd {
    display: flex;
    justify-content: center;
@@ -12,4 +14,40 @@
 .imgWrap img {
     width: 100%;
     object-fit: cover;
+}
+
+.paginationBtns {
+    list-style: none;
+    display: flex;
+    justify-content: center; 
+}
+
+.paginationActive {
+    border-radius: 50%;
+    text-align: center;
+    color: white;
+    background-color: #0B5ED7;
+}
+
+.prevBtn {
+    text-decoration: none;
+    font-size: large;
+}
+.paginationBtns a {
+    margin: 15px;
+    padding : 5px 5px;
+    font-size: large;
+    font-weight: 600;
+}
+.nextBtn {
+    text-decoration: none;
+}
+
+.paginationDisabled {
+    color: gray;
+}
+
+.paginationDisabled:hover {
+    color: gray;
+    cursor: not-allowed;
 }
