--- a/src/features/customer/home/pages/HomePage.css
+++ b/src/features/customer/home/pages/HomePage.css
@@ -61,7 +61,7 @@
 
 
 
-.homefooter{
+/* .homefooter{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     padding-left: 10px;
@@ -72,7 +72,7 @@
 .product-main{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-}
+} */
 
 .col-sm-3 {
     margin-bottom: 20px;
