--- a/src/features/customer/home/components/HomeHeader.css
+++ b/src/features/customer/home/components/HomeHeader.css
@@ -1,32 +1,40 @@
-.header__name{
-    text-decoration: none;
+.header__name {
+  text-decoration: none;
 }
 
-.header__right{
-    display: flex;
+.header__right {
+  display: flex;
+}
+.header-wrapper {
+  background-color: wheat;
+  color: white;
+}
+.dangnhap {
+  text-decoration: none;
+  background: white;
+  text-align: center;
+  border-radius: 20px;
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
 }
 
-.dangnhap{
-    text-decoration: none;
-    background: white;
-    text-align: center;
-    border-radius: 20px;
-    width: 100%;
-    padding: 10px;
-    cursor: pointer;
+.dangky {
+  text-decoration: none;
+  background: white;
+  text-align: center;
+  border-radius: 20px;
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
 }
 
-.dangky{
-    text-decoration: none;
-    background: white;
-    text-align: center;
-    border-radius: 20px;
-    width: 100%;
-    padding: 10px;
-    cursor: pointer;
+.menu__header > a {
+  text-decoration: none;
+  color: #000;
 }
 
-.menu__header>a {
-    text-decoration: none;
-    color: #000;
+.ps__logo img {
+  width: auto;
+  height: 275px;
 }
