--- a/src/features/customer/checkout/Checkout.css
+++ b/src/features/customer/checkout/Checkout.css
@@ -12,6 +12,7 @@
 }
 .container__checkout input[type="text"] {
   width: 80%;
+  height: 50px;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
@@ -24,10 +25,13 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  border-bottom: 1px solid #d6d6d6;
+  margin-bottom: 10px;
 }
 .container__checkout .imgItem {
   width: 75px;
   height: 75px;
+  margin-right: 10px;
 }
 .container__checkout .imgItem img {
   vertical-align: middle;
@@ -42,4 +46,72 @@
 .quantity {
   font-size: 14px;
   display: inline;
+}
+.container__checkout .priceItem {
+  font-size: 16px;
+  margin-left: 20px;
+}
+.container__checkout button {
+  cursor: pointer;
+  width: 18%;
+  height: 50px;
+  font-size: 14px;
+  font-weight: 600;
+  margin-left: 2%;
+  background-color: #3777e9;
+  border-radius: 4px;
+  color: white;
+}
+.container__checkout .coupon,
+.calPrice {
+  border-bottom: 1px solid #d6d6d6;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+.container__checkout p {
+  padding: 0px;
+  margin: 0px;
+}
+.container__checkout .calPrice {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 16px;
+}
+.container__checkout .namePriceList,
+.priceList {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.container__checkout .priceList {
+  align-items: flex-end;
+}
+.container__checkout .totalPrice {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.container__checkout .checkout {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 16px;
+}
+.container__checkout .checkout a {
+  display: flex;
+  flex-direction: row;
+}
+.container__checkout .checkout a .icon {
+  margin-left: 10px;
+}
+.container__checkout .checkout a:hover .icon {
+  margin-left: 0px;
+  margin-right: 10px;
+  transition-duration: 0.5s;
+}
+.container__checkout .checkout button {
+  width: 25%;
 }
