--- a/src/features/customer/home/components/HomeHeader.css
+++ b/src/features/customer/home/components/HomeHeader.css
@@ -5,7 +5,7 @@
 .header__right {
   display: flex;
 }
-.header-wrapper {
+.nav__header .header-wrapper {
   background-color: wheat;
   color: white;
 }
@@ -34,7 +34,22 @@
   color: #000;
 }
 
-.ps__logo img {
+.nav__header .ps__logo img {
   width: auto;
   height: 275px;
+}
+
+.nav__header .header__right p {
+  color: black;
+}
+.nav__header .header__right .badge {
+  position: absolute;
+  border: 1px solid gray;
+  font-size: 10px;
+  border-radius: 4px;
+  color: white;
+  background-color: #4374d0;
+  padding: 5px;
+  top: 26px;
+  right: 119px;
 }
