--- a/src/shareComponent/formikCustom/form.css
+++ b/src/shareComponent/formikCustom/form.css
@@ -10,10 +10,9 @@ input[type="password"],
 textarea,
 select {
   display: block;
-  padding: 6px 12px;
-  width: 250px;
+  width: 200px;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 1;
   color: #555;
   background-color: #fff;
   border: 1px solid #ccc;
@@ -39,11 +38,16 @@ select {
   font-weight: 400;
 }
 
-.form_control {
-  margin-bottom: 20px;
-  margin-right: 20px;
-}
-
 .error {
   color: red;
+  font-size: 14px;
+}
+
+label {
+  font-size: 16px;
+}
+
+.form_control input[type="text"] {
+  font-size: 16px;
+  width: 500px;
 }
