--- a/src/features/customer/home/components/style.css
+++ b/src/features/customer/home/components/style.css
@@ -95,3 +95,12 @@
 .socialMedia svg {
   font-size: 28px;
 }
+
+.btnkj {
+  color: #466082;
+  font-size: 16px;
+  border: 1px solid #466082;
+  border-radius: 20px;
+  padding: 10px;
+  margin-left: 20px;
+}
